src/test/ui/issues/issue-49934.stderr
error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934.rs:11:5
   |
LL |     #[derive(Debug)]
   |     ^^^^^^^^^^^^^^^^

error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934.rs:16:5
   |
LL |     #[derive(Debug)]
   |     ^^^^^^^^^^^^^^^^

error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934.rs:20:5
   |
LL |     #[derive(Debug)]
   |     ^^^^^^^^^^^^^^^^

error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934.rs:24:13
   |
LL |     let _ = #[derive(Debug)] "Hello, world!";
   |             ^^^^^^^^^^^^^^^^

error[E0774]: `derive` may only be applied to structs, enums and unions
  --> $DIR/issue-49934.rs:29:9
   |
LL |         #[derive(Debug)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0774`.
